<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_nama_id"
        android:textSize="@dimen/inp_label_name"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/btn_vlm_prisma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_volume_prisma"
        android:textSize="@dimen/btn_hitung"
        android:padding="20dp"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/btn_vlm_balok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_volume_balok"
        android:textSize="@dimen/btn_hitung"
        android:padding="20dp"
        android:layout_marginTop="5dp"/>

</LinearLayout>